--- a/performance/requirements.txt
+++ b/performance/requirements.txt
@@ -21,6 +21,7 @@ wheel
 
 # tornado 4.4.1 dependencies
 backports-abc==0.5
+backports.ssl_match_hostname==3.5.0.1
 singledispatch==3.4.0.3
 certifi==2017.4.17
 
